--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -18,12 +18,12 @@ a {
 }
 
 body, html {
-  height: 100vh;
   color: #626685;
   background: #f0f0f0;
 }
 
 body {
+  height: calc(100vh - 69px);
   min-width: 320px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
