--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -102,6 +102,7 @@
 
 /*================================= FOOTER =========================================*/
 footer {
+    min-height: 50px;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     padding-block: 15px;
