(updated): css sidebar

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2,12 +2,12 @@
     --main-tx-color: #626685;
     --white-bg: #f0f0f0;
     --dark-bg: #113f67;
-    --link-color: #44b9b1ed;
+    --link-color: rgba(41, 154, 148, 0.93);
 }
 
 /*================================= HEADER =========================================*/
 .header {
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0 1px 1px, rgba(9, 30, 66, 0.13) 0 0 1px 1px;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     background-color: var(--dark-bg);
@@ -43,16 +43,14 @@
     display: flex;
 
     .main-content {
-        width: 100%;
-        min-width: 70%;
-        max-width: 70%;
         display: flex;
+        flex: 3;
         flex-direction: column;
         row-gap: 20px;
 
         .card {
             border-radius: 10px;
-            box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+            box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0, rgba(27, 31, 35, 0.15) 0 0 0 1px;
             padding: 15px;
             margin-inline: 20px;
 
@@ -80,21 +78,37 @@
     }
 
     .main-sidebar {
+        flex: 1;
         position: relative;
         display: flex;
         justify-content: center;
-        min-width: 30%;
         text-align: center;
 
         .sidebar-group {
             position: fixed;
 
+            h3 {
+                font-size: 25px;
+                margin-block-end: 15px;
+            }
+
+            ul {
+                box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0, rgba(27, 31, 35, 0.15) 0 0 0 1px;
+                border-radius: 10px;
+
+            }
+
             ul > li {
-                border-bottom: 1px solid #113f67;
-                padding:10px 5px;
-                a{
+                padding: 12px 60px;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+
+                a {
                     color: var(--link-color);
                 }
+            }
+
+            li:last-child {
+                border-bottom: none;
             }
         }
     }
